More information about lacking features

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-UIKit Class that will autoresize itself and any super views based on their autoresizingMask, as subview of NDStrechView are hidden and made visible.
+UIKit Class that will autoresize itself and any super views based on their autoresizingMask, as subview of NDStrechView are hidden and made visible. The only way to add views at the movement is with addView, as the order of the subview has to reflect their position. Later on the other methods like insertAtIndex or swapIndexs can change the sub view positions accordingly, also removeView is not currently support, but could be added upon the hide mechanism, some proper exception throwing needs to be added if you try to hide a view which is not a subview of NDStrechView.
+To hide views you need to tell the NDStrechView which view you want to hide, telling a view itself to hide will not result in resizing. There also needs to be some documentation.
